--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run sls:offline",
+    "sls:offline": "./node_modules/.bin/sls offline start --stage local"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "express": "^4.18.1",
+    "serverless-http": "^3.0.1"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
@@ -20,7 +23,9 @@
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
+    "serverless-bundle": "^5.3.0",
     "serverless-esbuild": "^1.23.3",
+    "serverless-offline": "^8.8.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
