--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws/dynamodb-data-mapper": "^0.7.3",
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
     "express": "^4.18.1",
