--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
     "express": "^4.18.1",
-    "serverless-http": "^3.0.1"
+    "serverless-http": "^3.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
