Todo API serverless deployment changes

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 Todo_Dynamo_TABLE=todo_list_management
+role_Arn=arn:aws:iam::389148235425:role/todo_list_role
+DEPLOYMENT_BUCKET=s3-serverless-deploy-dev
+REGION=us-east-1
