--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "serverless-http": "^3.0.1",
     "uuid": "^8.3.2"
   },
